--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">BaseLed</string>
     <string name="key_node_ips">nodeIps</string>
     <string name="key_debug">debug</string>
+    <string name="key_last_master_ip">lastMasterIp</string>
     <string name="title_activity_main">MainActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
