--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="txt_audio_permission_hint">You need to grant the record audio permission in order to use the Music mode!</string>
     <string name="txt_generate_tone">\"Generate Tone: \"</string>
     <string name="txt_hertz">\" Hz\"</string>
+    <string name="txt_connect_success">\"Successfully connected to: \"</string>
+    <string name="txt_connection_lost_1">\"Connection to to \"</string>
+    <string name="txt_connection_lost_2">\" has been lost!\"</string>
 </resources>
